--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "stencil build --prerender",
     "start": "stencil build --dev --watch --serve",
     "test": "jest",
-    "test.watch": "jest --watch",
-    "deploy": "npm run build && git add dist && git commit -m \"deploy\" && git subtree push --prefix dist origin gh-pages"
+    "test.watch": "jest --watch"
   },
   "dependencies": {
     "@stencil/core": "^0.11.0",
