--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "stencil build --prerender",
     "start": "stencil build --dev --watch --serve",
     "test": "jest",
-    "test.watch": "jest --watch"
+    "test.watch": "jest --watch",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@stencil/core": "^0.11.0",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
+    "gh-pages": "^1.2.0",
     "jest": "^23.4.2"
   },
   "repository": {
