--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Stencil Starter",
-  "short_name": "Stencil",
+  "name": "S'more Docs",
+  "short_name": "S'more",
   "start_url": "/",
   "display": "standalone",
   "icons": [{
