--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@smore/core": "0.0.1-alpha.3",
     "@stencil/core": "^0.11.0",
     "@stencil/router": "^0.2.5",
     "request": "^2.88.0"
