--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@smore/core": "0.0.1-alpha.3",
     "@stencil/core": "^0.11.0",
     "@stencil/router": "^0.2.5",
+    "frontmatter": "0.0.3",
+    "highlight.js": "^9.12.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
     "@types/jest": "^23.3.1",
     "gh-pages": "^1.2.0",
     "jest": "^23.4.2",
+    "marked": "^0.5.0",
     "rimraf": "^2.6.2"
   },
   "repository": {
