--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "description": "Stencil App Starter",
   "scripts": {
-    "build": "stencil build --prerender",
+    "build": "stencil build",
+    "build:serve": "stencil build --prerender --serve",
     "start": "stencil build --dev --watch --serve",
     "test": "jest",
     "test.watch": "jest --watch",
@@ -12,8 +13,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@stencil/core": "^0.11.0",
-    "@stencil/router": "^0.2.5",
+    "@smore/trailmap": "^0.1.1",
+    "@stencil/core": "^0.13.1",
+    "@stencil/router": "^0.3.0",
     "frontmatter": "0.0.3",
     "highlight.js": "^9.12.0",
     "request": "^2.88.0"
@@ -23,7 +25,8 @@
     "gh-pages": "^1.2.0",
     "jest": "^23.4.2",
     "marked": "^0.5.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "workbox-build": "3.4.1"
   },
   "repository": {
     "type": "git",
